<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ReserBus2.1</string>
    <string name="ingresa_los_6_digitos_del_codigo_de_verificacion_que_se_envio_por_sms_a_tu_numero">ingresa los 6 digitos del codigo de verificacion que se envio por sms a tu numero</string>
    <string name="verificar">Verificar</string>
    <string name="ingresa_tu_numer_de_celular">Ingresa tu Numer de Celular</string>
    <string name="ingresa_los_6_digitos_del_codigo_de_verificacion_que_se_envio_por_SMS_a_tu_numero">ingresa los 6 digitos del codigo de verificacion que se envio por SMS a tu numero</string>
    <string name="siguiente">Siguiente</string>
    <string name="navigation">NavigationDrawerCodeLia</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_vector6">vector_6</string>
    <string name="mis_reserva">Mis Reservas:</string>
    <string name="av_primera_">Av. Primera - Irpavi</string>
    <string name="av_principa">Av. Principal - Mallasa</string>
    <string name="av_segunda_prado">Av. Segunda - Prado</string>
    <string name="av_cuarta_los_pinos">Av. Cuarta - Los Pinos</string>
    <string name="ingresa_tu_n_mero_de_celular">celular</string>
    <string name="ingresa_tu_numero_de_celular">Ingresa tu numero de celular</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="inicia_sesi_n">Inicia Sesión</string>
    <string name="o">O</string>
    <string name="accede_con_tu_cuenta_reserbus">Accede con tu cuenta ReserBus</string>
    <string name="email">Email:</string>
    <string name="ejemplo_gmail_com">Ejemplo@gmail.com</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="no_tienes_una_cuenta_reserbus">¿No tienes una cuenta ReserBus?</string>
    <string name="crea_una">Crea una</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="ㅤㅤejemplo_gmail_com">ㅤㅤejemplo@gmail.com</string>
    <string name="ㅤejemplo_gmail_com">ㅤEjemplo@gmail.com</string>
    <string name="acceder">Acceder</string>
    <string name="nombre">Nombre:</string>
    <string name="ㅤ">ㅤ</string>
    <string name="ㅤㅤ">ㅤ</string>
    <string name="genero">Genero:</string>
    <string name="emaill">Email:</string>
    <string name="contrase_aa">Contraseña:</string>
    <string name="confirmar_contrase_a">Confirmar contraseña:</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ㅤㅤㅤ">ㅤ</string>
    <string name="completa_tu_perfil">Completa tu ㅤㅤPerfil</string>
    <string name="nombree">Nombre:</string>
    <string name="generoo">Genero:</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento:</string>
    <string name="completar">Completar</string>
    <string name="quieres_unirte_al_equipo_de_reserbus">¿Quieres unirte al equipo de ReserBus?</string>
    <string name="llama_al_72011144_para_pedir_mas_informaci_n">!Llama al 72011144 para pedir mas información!</string>
    <string name="si_quieres_agilizar_el_proceso_puedes_enviar_este_formulario">Si quieres agilizar el proceso, puedes enviar este formulario:</string>
    <string name="nombre_completo">Nombre Completo:</string>
    <string name="nro_de_carnet">Nro. de Carnet:</string>
    <string name="ㅤㅤㅤㅤㅤ">ㅤ</string>
    <string name="ㅤㅤㅤㅤ">ㅤ</string>
    <string name="fecha_de_nacimientoo">Fecha de Nacimiento:</string>
    <string name="nro_de_celular">Nro. de Celular:</string>
    <string name="ㅤㅤㅤㅤㅤㅤ">ㅤ</string>
    <string name="tipo_de_vehiculo">Tipo de vehiculo:</string>
    <string name="ㅤㅤㅤㅤㅤㅤㅤ">ㅤ</string>
    <string name="ciudad_donde_circula">Ciudad donde circula:</string>
    <string name="ㅤㅤㅤㅤㅤㅤㅤㅤ">ㅤ</string>
    <string name="numero_de_asientos">Numero de Asientos:</string>
    <string name="enviar">Enviar</string>
    <string name="todo">TODO</string>
    <string name="aca_puedes_ver_la_reservas_que_hayas_realizado">Aca puedes ver la reservas que hayas realizado</string>
    <string name="aca_ves_la_hora_estimada_de_recojo_y_el_estado_de_tu_reserva_bus">Aca ves la hora estimada de recojo y el estado de tu reserva/bus</string>
    <string name="agrega_una_reserva_aqui">Agrega una reserva aqui</string>
    <string name="mis_reservas">Mis Reservas:</string>
    <string name="av_primera_irpavi">Av. Primera-Irpavi</string>
    <string name="todooo">TODO</string>
    <string name="av_principal_mallasa">Av. Principal-Mallasa</string>
    <string name="av_primera_irpavi2">Av. Primera-Irpavi</string>
    <string name="av_principal_mallasa2">Av. Principal-Mallasa</string>
    <string name="_08_15">08:15</string>
    <string name="reservado">Reservado</string>
    <string name="llegando">Llegando</string>
    <string name="lista_de_estados">Lista de Estados:</string>
    <string name="reservado2">Reservado</string>
    <string name="significa_que_tu_cupo_fue_exitosamente_reservado_para_el_viaje_con_origen_y_destino_indicados_en_la_barra_gris">Significa que tu cupo fue exitosamente reservado para el viaje con origen y destino indicados en la barra gris.</string>
    <string name="cancelado_sin_deducci_n">Cancelado sin Deducción</string>
    <string name="significa_que_cancelaste_tu_reserva_dentro_de_nuestro_tiempo_establecido_no_se_te_cobra_el_pasaje">Significa que cancelaste tu reserva dentro de nuestro tiempo establecido, no se te cobra el pasaje.</string>
    <string name="en_ruta">En Ruta</string>
    <string name="significa_que_tu_bus_ya_comenzo_su_viaje_por_la_ruta">Significa que tu bus ya comenzo su viaje por la ruta.</string>
    <string name="llegando_esperando">Llegando/Esperando</string>
    <string name="significa_que_el_bus_se_encuentra_a_500_metros_aproximadamente_30_segundos_o_en_el_punto_de_recojo">Significa que el bus se encuentra a 500 metros (aproximadamente 30 segundos) o en el punto de recojo.</string>
    <string name="demorado">Demorado</string>
    <string name="significa_que_tu_bus_se_encuentra_demorado_porfavor_espera_al_bus_en_el_area_de_recojo_seleccionada">Significa que tu bus se encuentra demorado. Porfavor espera al bus en el area de recojo seleccionada.</string>
    <string name="perdido_cancelado_con_deducci_n">Perdido/Cancelado con deducción</string>
    <string name="significa_que_tu_bus_partio_sin_ti_o_que_cancelaste_la_reserva_nuestra_normativa_establece_un_tiempo_de_espera_de_maximo_30_segundos_para_no_atrasar_a_los_otros_pasajeros_y_un_tiempo_minimo_de_30_minutos_para_cancelar_la_reserva_el_pasaje_se_descuenta_de_tu_saldo_para_que_el_chofer_no_se_vea_perjudicado">Significa que tu bus partio sin ti o que cancelaste la reserva. Nuestra normativa establece un tiempo de espera de maximo 30 segundos para no atrasar a los otros pasajeros y un tiempo minimo de 30 minutos para cancelar la reserva. El pasaje se descuenta de tu saldo para que el chofer no se vea perjudicado.</string>
    <string name="crea_una1">Crea una</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="historial_de_reservas">Historial de Reservas:</string>
    <string name="av_primera_irpavi3">Av. Primera - Irpavi</string>
    <string name="av_primera_mallasa2">Av. Primera - Mallasa</string>
    <string name="av_cuarta_los_pinos2">Av. Cuarta - Los Pinos</string>
    <string name="av_segunda_prado2">Av. Segunda - Prado</string>
    <string name="_6_de_mayo_2023">6 de mayo, 2023</string>
    <string name="_15_de_abril_2023">15 de abril, 2023</string>
    <string name="_27_de_marzo_2023">27 de marzo, 2023</string>
    <string name="_12_de_marzo_2023">12 de marzo, 2023</string>
    <string name="bs_2_50">Bs. 2.50</string>
    <string name="bs_3_50">Bs. 3.50</string>
    <string name="bs_2_502">Bs. 2.50</string>
    <string name="bs_2_503">Bs. 2.50</string>
    <string name="todo9">TODO</string>
    <string name="billetera">Billetera</string>
    <string name="todo10">TODO10</string>
    <string name="tu_saldo">Tu saldo</string>
    <string name="bs_8_50">Bs. 8.50</string>
    <string name="codigo_cliente_123123">CODIGO CLIENTE: 123123</string>
    <string name="metodos_de_pago">Metodos de Pago</string>
    <string name="bs_7">Bs. 7</string>
    <string name="bs_50">Bs. 50</string>
    <string name="bs_100">Bs. 100</string>
    <string name="bs_15">Bs. 15</string>
    <string name="bs_30">Bs. 30</string>
    <string name="pagar_con_qr">Pagar con QR</string>
    <string name="puntos_de_recarga">Puntos de Recarga:</string>
    <string name="av_primera_irpavi4">Av. Primera - Irpavi</string>
    <string name="av_segunda_prado3">Av. Segunda - Prado</string>
    <string name="av_segunda_los_pinos3">Av. Segunda - Los Pinos</string>
    <string name="av_primera_mallasa3">Av. Primera - Mallasa</string>
    <string name="todo11">TODO</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="av_principal_123_irpavi_la_paz">av_principal_123_irpavi_la_paz</string>
    <string name="av_princi_123_los_pinos_la_paz">av_princi_123_los_pinos_la_paz</string>
    <string name="todo13">todo13</string>
    <string name="_8_15">/_8_15</string>
    <string name="_123">_123</string>
    <string name="un23">123</string>
    <string name="placa_123abc">placa 123abc</string>
    <string name="avenida_irpavi_lapaz">av principal 123 irpavi la paz</string>
    <string name="irpavi_ll">irpavi ll</string>
    <string name="todo14">todo14</string>
    <string name="_9_00">9:00</string>
    <string name="chasquipampa_bajo">chasquipampa bajo</string>
    <string name="_8_15_">8:15</string>
    <string name="quedan_5_cupos">quedan 5 cupos</string>
    <string name="reservar">reservar</string>
    <string name="llegando_">Llegando</string>
    <string name="todo_">TODO</string>
    <string name="_08_15_">08:15</string>
    <string name="_16_30">16:30</string>
    <string name="_123_">123</string>
    <string name="av_principal_123_los_pinos_la_paz">av principal 123 los pinos la paz</string>
    <string name="todo__">TODO</string>
    <string name="para_reservar_asiento">para reservar asiento</string>
    <string name="todo1113">todo1113</string>
    <string name="todo12123">todo12123</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="default_web_client_id">754405662024-ianlkurk2pb8jr31peouoo8o5vlnlmk3.apps.googleusercontent.com</string>
    <string name="prefs_file">com.example.reserbus21.PREFERENCE_FILE_KEY</string>
    <string name="ingresa_tu_numero_de_celular_bien">Ingresa tu Numero de Celular</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCv5lelPkXVzQ6PDKL58FTbUb3_jyhpGbQ</string>
    <string name="facebook_app_id">1040802503585841</string>
    <string name="fb_login_protocol_scheme">fb1040802503585841</string>
    <string name="facebook_client_token">964213df0325b3ba71a8f744ca50101e</string>




</resources>