<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrabajaActivity2">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="284dp"
        android:layout_height="77dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/quieres_unirte_al_equipo_de_reserbus"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="313dp"
        android:layout_height="74dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/llama_al_72011144_para_pedir_mas_informaci_n"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="233dp"
        android:layout_height="84dp"
        android:fontFamily="@font/roboto"
        android:gravity="center_horizontal|top"
        android:text="@string/si_quieres_agilizar_el_proceso_puedes_enviar_este_formulario"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="143dp"
        android:layout_height="18dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nombre_completo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="143dp"
        android:layout_height="18dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nro_de_carnet"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ㅤㅤㅤㅤㅤ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ㅤㅤㅤㅤ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="159dp"
        android:layout_height="19dp"
        android:fontFamily="@font/roboto"
        android:text="@string/fecha_de_nacimientoo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextDate3"
        android:layout_width="159dp"
        android:layout_height="49dp"
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="101dp"
        android:layout_height="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nro_de_celular"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ㅤㅤㅤㅤㅤㅤ"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/tipo_de_vehiculo"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ㅤㅤㅤㅤㅤㅤㅤ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/ciudad_donde_circula"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ㅤㅤㅤㅤㅤㅤㅤㅤ"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/numero_de_asientos"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondo"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841"
        tools:ignore="LabelFor,MissingConstraints,SpeakableTextPresentCheck"
        android:autofillHints="" />

    <Button
        android:id="@+id/button4"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="66dp"
        android:layout_height="72dp"
        android:background="#FFFBFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/boton_atras" />

</androidx.constraintlayout.widget.ConstraintLayout>